# tealr

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: compile_inline_teal.rs  derive.rs  embed_teal.rs  example1.rs  manual.rs  manual_documentation.rs  named_parameters.rs  userdata_proxy.rs  variadics.rs
examples/mlua/: compile_inline_teal.rs  derive.rs  embed_teal.rs  manual.rs  manual_documentation.rs  named_parameters.rs  userdata_proxy.rs
examples/rlua/: basic_type.lua  compile_inline_teal.rs  derive.rs  manual.rs  manual_documentation.rs  named_parameters.rs
src/: export_instance.rs  exported_function.rs  lib.rs  macro_expressions.rs  main.rs  mlu.rs  rlu.rs  teal_data.rs  teal_data_methods.rs  teal_multivalue.rs  type_generator.rs  type_representation.rs  type_walker.rs  user_data_wrapper.rs
src/mlu/: generics.rs  named_parameters.rs  picker_macro.rs  teal_data.rs  teal_data_fields.rs  teal_data_macros.rs  teal_data_methods.rs  to_from_macro_doc.md  typed_function.rs  user_data_proxy.rs  user_data_wrapper.rs  variadics.rs
src/rlu/: generics.rs  named_parameters.rs  picker_macro.rs  teal_data_methods.rs  to_from_macro_doc.md  typed_function.rs  user_data_wrapper.rs
tealr/: CHANGES.md  Cargo.toml  README.md
tealr/examples/: basic_teal_file.tl  compile_inline_teal.rs  derive.rs  manual.rs  prime_lua.rs
tealr/examples/mlua/: compile_inline_teal.rs  derive.rs  embed_teal.rs  manual.rs  manual_documentation.rs
tealr/examples/rlua/: basic_type.d.tl  compile_inline_teal.rs  derive.rs  embed_teal.rs  manual.rs  manual_documentation.rs
tealr/src/: documentation_collector.rs  exported_function.rs  lib.rs  mlu.rs  rlu.rs  teal_data.rs  teal_data_methods.rs  teal_multivalue.rs  type_generator.rs  type_printer.rs  type_representation.rs  type_walker.rs  user_data_wrapper.rs
tealr/src/mlu/: generics.rs  picker_macro.rs  teal_data.rs  teal_data_methods.rs  typed_function.rs  user_data_wrapper.rs
tealr/src/rlu/: generics.rs  picker_macro.rs  teal_data.rs  teal_data_methods.rs  typed_function.rs  user_data_wrapper.rs
tealr/tests/: embed_teal.rs  function_wrapper.rs  meta_methods.rs  readme_pieces.rs  to_from_lua.rs
tealr/tests/mlua/: async.rs  function_wrapper.rs  generics.rs  inlined_type.rs  meta_methods.rs  readme_pieces.rs  to_from_lua.rs  type_picker.rs
tealr/tests/rlua/: function_wrapper.rs  generics.rs  meta_methods.rs  readme_pieces.rs  test_embedded_compiler.tl  to_from_lua.rs  type_picker.rs
tealr_derive/: CHANGES.md  Cargo.toml  README.md
tealr_derive/src/: compile_inline_teal.rs  compiler_downloader.rs  documentation_macro.rs  embed_compiler.rs  from_to_lua.rs  lib.rs  user_data.rs
tealr_derive/src/embed_compiler/: download_compiler.rs  download_compiler_mock.rs  load_from_disk.rs
tests/: async.json  async.rs  embed_teal.rs  export_instances.json  export_instances.rs  function_wrapper.rs  generics.json  generics.rs  inlined_type.json  inlined_type.rs  meta_methods.json  meta_methods.rs  named_parameters.json  named_parameters.rs  readme_pieces.rs  to_from_derived.json  to_from_derived.rs  type_picker.json  type_picker.rs
tests/mlua/: async.rs  embed_teal.rs  export_instances.json  export_instances.rs  function_wrapper.rs  generics.json  generics.rs  inlined_type.json  inlined_type.rs  meta_methods.json  meta_methods.rs  named_parameters.json  named_parameters.rs  readme_pieces.rs  to_from_derived.json  to_from_derived.rs  type_picker.json  type_picker.rs
tests/rlua/: embed_teal.rs  export_instance.json  export_instances.rs  function_wrapper.rs  generics.json  generics.rs  meta_methods.json  meta_methods.rs  named_parameters.json  named_parameters.rs  readme_pieces.rs  to_from_derived.json  to_from_derived.rs  type_picker.json  type_picker.rs
