[package]
authors = ["Lenscas <lenscas@gmail.com>"]
categories = ["development-tools::ffi"]
description = "A crate to enhance the APIs provided by the mlua crates"
edition = "2021"
keywords = ["teal", "lua", "type", "generation", "type-generation"]
license = "MIT OR Apache-2.0"
name = "tealr"
readme = "README.md"
repository = "https://github.com/lenscas/tealr/"
version = "0.10.0"

[workspace]
members = ["tealr_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["derive", "compile", "embed_compiler_from_download"]

compile = ["tealr_derive/compile"]
derive = ["tealr_derive/derive"]
embed_compiler_from_download = ["tealr_derive/embed_compiler_from_download"]
embed_compiler_from_local = ["tealr_derive/embed_compiler_from_local"]

# mlua specific features
mlua_async = ["mlua/async"]
mlua_lua51 = ["mlua/lua51"]
mlua_lua52 = ["mlua/lua52"]
mlua_lua53 = ["mlua/lua53"]
mlua_lua54 = ["mlua/lua54"]
mlua_luajit = ["mlua/luajit"]
mlua_luajit52 = ["mlua/luajit52"]
mlua_luau = ["mlua/luau"]
mlua_macros = ["mlua/macros"]
mlua_module = ["mlua/module"]
mlua_send = ["mlua/send"]
mlua_serialize = ["mlua/serialize"]
mlua_vendored = ["mlua/vendored"]
mlua_error-send = ["mlua/error-send"]
mlua_userdata-wrappers = ["mlua/userdata-wrappers"]
mlua_anyhow = ["mlua/anyhow"]

# If the types defined in tealr should implement the needed traits to be used with lua.
self_to_lua = ["derive"]

[dependencies]
bstr = { version = "1.10.0", default-features = false, features = ["std"] }
itertools = "0.13.0"
mlua = { version = "0.10.1", optional = true, default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.132"
tealr_derive = { version = "0.10.0", optional = true, path = "./tealr_derive", features = [
] }

#Mlua tests
[[test]]
name = "mlua_embed_teal"
path = "tests/embed_teal.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_inlined_type"
path = "tests/inlined_type.rs"
required-features = ["mlua"]

[[test]]
name = "mlua_generics"
path = "tests/generics.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_type_picker"
path = "tests/type_picker.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_async"
path = "tests/async.rs"
required-features = ["mlua", "mlua_async"]
[[test]]
name = "mlua_function_wrapper"
path = "tests/function_wrapper.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_readme_pieces"
path = "tests/readme_pieces.rs"
required-features = ["mlua"]

[[test]]
name = "mlua_meta_methods"
path = "tests/meta_methods.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_to_from_derived"
path = "tests/to_from_derived.rs"
required-features = ["mlua"]

[[test]]
name = "mlua_export_instances"
path = "tests/export_instances.rs"
required-features = ["mlua"]

[[test]]
name = "mlua_named_parameters"
path = "tests/named_parameters.rs"
required-features = ["mlua"]


#examples using mlua
[[example]]
name = "mlua_compile_inline_teal"
path = "examples/compile_inline_teal.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_derive"
path = "examples/derive.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_embed_teal"
path = "examples/embed_teal.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_manual"
path = "examples/manual.rs"
required-features = ["mlua"]

[[example]]
name = "mlua_manual_documentation"
path = "examples/manual_documentation.rs"
required-features = ["mlua"]

[[example]]
name = "mlua_userdata_proxy"
path = "examples/userdata_proxy.rs"
required-features = ["mlua"]

[[example]]
name = "mlua_named_parameters"
path = "examples/named_parameters.rs"
required-features = ["mlua"]

[package.metadata.docs.rs]
features = ["mlua_lua54", "mlua_vendored", "mlua_async", "mlua_serialize"]
rustdoc-args = ["--cfg", "docsrs"]
