[package]
authors = ["Lenscas <lenscas@gmail.com>"]
categories = ["development-tools::ffi"]
description = "Traits and structs to generate teal type defintions."
edition = "2018"
keywords = ["teal", "lua", "type", "generation", "type-generation"]
license = "MIT OR Apache-2.0"
name = "tealr"
readme = "README.md"
repository = "https://github.com/lenscas/tealr/"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["derive", "compile", "embed_compiler_from_download"]

compile = ["tealr_derive/compile"]
derive = ["tealr_derive/derive"]
embed_compiler_from_download = ["tealr_derive/embed_compiler_from_download"]
embed_compiler_from_local = ["tealr_derive/embed_compiler_from_local"]

[dependencies]
bstr = {version = "0.2", default_features = false}
rlua = "0.17"
tealr_derive = {version = "0.5.0", optional = true, path = "../tealr_derive"}
