[package]
authors = ["Lenscas <lenscas@gmail.com>"]
categories = ["development-tools::ffi"]
description = "Traits and structs to generate teal type defintions."
edition = "2018"
keywords = ["teal", "lua", "type", "generation", "type-generation"]
license = "MIT OR Apache-2.0"
name = "tealr"
readme = "README.md"
repository = "https://github.com/lenscas/tealr/"
version = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["derive", "compile", "embed_compiler_from_download"]

compile = ["tealr_derive/compile"]
derive = ["tealr_derive/derive"]
embed_compiler_from_download = ["tealr_derive/embed_compiler_from_download"]
embed_compiler_from_local = ["tealr_derive/embed_compiler_from_local"]

[dependencies]
bstr = {version = "0.2", default_features = false, features = ["std"]}
mlua = {version = "0.5", optional = true, features = ["send", "lua54"]}
rlua = {version = "0.17", optional = true}
tealr_derive = {version = "0.5.0", optional = true, path = "../tealr_derive"}

# Rlua tests
[[test]]
name = "rlua_embed_teal"
path = "tests/rlua/embed_teal.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_function_wrapper"
path = "tests/rlua/function_wrapper.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_readme_pieces"
path = "tests/rlua/readme_pieces.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_to_from_lua"
path = "tests/rlua/to_from_lua.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_meta_methods"
path = "tests/rlua/meta_methods.rs"
required-features = ["rlua"]

#Mlua tests
[[test]]
name = "mlua_embed_teal"
path = "tests/mlua/embed_teal.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_function_wrapper"
path = "tests/mlua/function_wrapper.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_readme_pieces"
path = "tests/mlua/readme_pieces.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_to_from_lua"
path = "tests/mlua/to_from_lua.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_meta_methods"
path = "tests/mlua/meta_methods.rs"
required-features = ["mlua"]

# Examples using rlua
[[example]]
name = "rlua_compile_inline_teal"
path = "examples/rlua/compile_inline_teal.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_derive"
path = "examples/rlua/derive.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_embed_teal"
path = "examples/rlua/embed_teal.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_manual"
path = "examples/rlua/manual.rs"
required-features = ["rlua"]

#examples using mlua
[[example]]
name = "mlua_compile_inline_teal"
path = "examples/mlua/compile_inline_teal.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_derive"
path = "examples/mlua/derive.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_embed_teal"
path = "examples/mlua/embed_teal.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_manual"
path = "examples/mlua/manual.rs"
required-features = ["mlua"]
