[package]
authors = ["Lenscas <lenscas@gmail.com>"]
categories = ["development-tools::ffi"]
description = "A crate to enhance the APIs provided by the rlua and mlua crates"
edition = "2021"
keywords = ["teal", "lua", "type", "generation", "type-generation"]
license = "MIT OR Apache-2.0"
name = "tealr"
readme = "README.md"
repository = "https://github.com/lenscas/tealr/"
version = "0.8.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

default = ["derive", "compile", "embed_compiler_from_download"]

compile = ["tealr_derive/compile"]
derive = ["tealr_derive/derive"]
embed_compiler_from_download = ["tealr_derive/embed_compiler_from_download"]
embed_compiler_from_local = ["tealr_derive/embed_compiler_from_local"]

# mlua specific features
mlua_async = ["mlua/async"]
mlua_lua51 = ["mlua/lua51"]
mlua_lua52 = ["mlua/lua52"]
mlua_lua53 = ["mlua/lua53"]
mlua_lua54 = ["mlua/lua54"]
mlua_luajit = ["mlua/luajit"]
mlua_luajit52 = ["mlua/luajit52"]
mlua_macros = ["mlua/macros"]
mlua_module = ["mlua/module"]
mlua_send = ["mlua/send"]
mlua_serialize = ["mlua/serialize"]
mlua_vendored = ["mlua/vendored"]

#rlua specific features
rlua_builtin-lua51 = ["rlua/builtin-lua51"]
rlua_builtin-lua53 = ["rlua/builtin-lua53"]
rlua_builtin-lua54 = ["rlua/builtin-lua54"]
rlua_system-lua51 = ["rlua/system-lua51"]
rlua_system-lua53 = ["rlua/system-lua53"]
rlua_system-lua54 = ["rlua/system-lua54"]

[dependencies]
bstr = {version = "0.2", default_features = false, features = ["std"]}
itertools = "0.10.3"
mlua = {version = "0.7.4", optional = true, default_features = false}
rlua = {version = "0.19.1", optional = true, default_features = false}
serde = {version = "1.0.136", features = ["derive"]}
tealr_derive = {version = "0.8.0", optional = true, path = "../tealr_derive"}

# Rlua tests
[[test]]
name = "rlua_embed_teal"
path = "tests/rlua/embed_teal.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_generics"
path = "tests/rlua/generics.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_type_picker"
path = "tests/rlua/type_picker.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_function_wrapper"
path = "tests/rlua/function_wrapper.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_readme_pieces"
path = "tests/rlua/readme_pieces.rs"
required-features = ["rlua"]

[[test]]
name = "rlua_meta_methods"
path = "tests/rlua/meta_methods.rs"
required-features = ["rlua"]
[[test]]
name = "rlua_to_from_derived"
path = "tests/rlua/to_from_derived.rs"
required-features = ["rlua"]

#Mlua tests
[[test]]
name = "mlua_embed_teal"
path = "tests/mlua/embed_teal.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_inlined_type"
path = "tests/mlua/inlined_type.rs"
required-features = ["mlua"]

[[test]]
name = "mlua_generics"
path = "tests/mlua/generics.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_type_picker"
path = "tests/mlua/type_picker.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_async"
path = "tests/mlua/async.rs"
required-features = ["mlua", "mlua_async"]
[[test]]
name = "mlua_function_wrapper"
path = "tests/mlua/function_wrapper.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_readme_pieces"
path = "tests/mlua/readme_pieces.rs"
required-features = ["mlua"]

[[test]]
name = "mlua_meta_methods"
path = "tests/mlua/meta_methods.rs"
required-features = ["mlua"]
[[test]]
name = "mlua_to_from_derived"
path = "tests/mlua/to_from_derived.rs"
required-features = ["mlua"]

# Examples using rlua
[[example]]
name = "rlua_compile_inline_teal"
path = "examples/rlua/compile_inline_teal.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_derive"
path = "examples/rlua/derive.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_embed_teal"
path = "examples/rlua/embed_teal.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_manual"
path = "examples/rlua/manual.rs"
required-features = ["rlua"]
[[example]]
name = "rlua_manual_documentation"
path = "examples/rlua/manual_documentation.rs"
required-features = ["rlua"]

#examples using mlua
[[example]]
name = "mlua_compile_inline_teal"
path = "examples/mlua/compile_inline_teal.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_derive"
path = "examples/mlua/derive.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_embed_teal"
path = "examples/mlua/embed_teal.rs"
required-features = ["mlua"]
[[example]]
name = "mlua_manual"
path = "examples/mlua/manual.rs"
required-features = ["mlua"]

[[example]]
name = "mlua_manual_documentation"
path = "examples/mlua/manual_documentation.rs"
required-features = ["mlua"]

[package.metadata.docs.rs]
features = ["mlua", "rlua", "rlua_builtin-lua54", "mlua_lua54", "mlua_vendored", "mlua_async", "mlua_serialize", "rlua_builtin-lua"]
