[lib]
proc-macro = true

[package]
authors = ["Lenscas <lenscas@gmail.com>"]
description = "The derive macro for tealr"
edition = "2018"
keywords = ["derive", "macro", "teal", "lua", "tealr"]
license = "MIT OR Apache-2.0"
name = "tealr_derive"
repository = "https://github.com/lenscas/tealr/"
version = "0.8.2"

[features]
compile = ["tempfile"]
derive = []
embed_compiler_from_download = ["tempfile", "zip", "ureq"]
embed_compiler_from_local = ["tempfile", "zip"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
tempfile = {version = "3.3.0", optional = true}
ureq = {version = "2.4.0", optional = true}
zip = {version = "0.6.2", optional = true}
